force-app/main/default/objects/Template__c/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>ActivityType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>