force-app/main/default/objects/Template__c/fields/CSS__c.field-meta.xml
<CustomField>
    <fullName>CSS__c</fullName>
    <label>CSS</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>