force-app/main/default/objects/Template__c/fields/Dev_Name__c.field-meta.xml
<CustomField>
    <fullName>Dev_Name__c</fullName>
    <label>Dev Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>