force-app/main/default/objects/Template__c/fields/Individual_Listing__c.field-meta.xml
<CustomField>
    <fullName>Individual_Listing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Render one individual Listing</label>
    <type>Checkbox</type>
</CustomField>