force-app/main/default/objects/Template__c/fields/IsMjml__c.field-meta.xml
<CustomField>
    <fullName>IsMjml__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsMjml</label>
    <type>Checkbox</type>
</CustomField>