force-app/main/default/objects/Template__c/fields/Media_Items__c.field-meta.xml
<CustomField>
    <fullName>Media_Items__c</fullName>
    <label>Media Items</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>