force-app/main/default/objects/Template__c/fields/Plain_Text__c.field-meta.xml
<CustomField>
    <fullName>Plain_Text__c</fullName>
    <label>Plain Text</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>