force-app/main/default/objects/Template__c/fields/Quicksend__c.field-meta.xml
<CustomField>
    <fullName>Quicksend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Quicksend template</label>
    <type>Checkbox</type>
</CustomField>