force-app/main/default/objects/Template__c/fields/Screenshot__c.field-meta.xml
<CustomField>
    <fullName>Screenshot__c</fullName>
    <label>Screenshot</label>
    <type>Url</type>
</CustomField>