force-app/main/default/objects/Template__c/fields/SystemExternalId__c.field-meta.xml
<CustomField>
    <fullName>SystemExternalId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SystemExternalId</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>