force-app/main/default/objects/Template__c/fields/TemplateId_pb__c.field-meta.xml
<CustomField>
    <fullName>TemplateId_pb__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template ID</label>
    <type>Text</type>
</CustomField>