force-app/main/default/objects/Template__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>email_template</fullName>
            </value>
            <value>
                <fullName>html_template</fullName>
            </value>
            <value>
                <fullName>pdf_template</fullName>
            </value>
            <value>
                <fullName>inline_template</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>