force-app/main/default/objects/Template__c/fields/Version_pb__c.field-meta.xml
<CustomField>
    <fullName>Version_pb__c</fullName>
    <label>Version</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>