force-app/main/default/objects/Template__c/listViews/All_Templates.listView-meta.xml
<ListView>
    <fullName>All_Templates</fullName>
    <columns>NAME</columns>
    <columns>Type__c</columns>
    <columns>Category__c</columns>
    <columns>Quicksend__c</columns>
    <columns>Individual_Listing__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>IsMjml__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Templates</label>
</ListView>